--- a/template.html
+++ b/template.html
@@ -667,7 +667,7 @@ pybossa.presentTask(function(task, deferred) {
         $("#finish").fadeIn(500);
     }
     $('#imgLink').tooltip();
-    $('<a href=\"../newtask\" class=\"btn btn-sm btn-info\" target=\"_blank\"><i class=\"glyphicon glyphicon-picture\"></i> Different card?</a>').insertAfter('#raw');
+    $('<a href=\"../newtask\" class=\"btn btn-sm btn-info\" target=\"_blank\"><i class=\"glyphicon glyphicon-picture\"></i> Different card?</a>').insertAfter('#imgLink');
         
 });
 
