--- a/long_description.html
+++ b/long_description.html
@@ -24,6 +24,11 @@
     the 3d modelling process to concentrate on the object itself and
     ignore irrelevant information.
         </p>
+
+        <h3>This project is on behalf of</h3>
+        <a href="http://finds.org.uk"><img src="/static/img/pasrgbsize4.jpg" width="213" height="104" alt="The Portable Antiquities Scheme logo"/></a>
+        <a href="http://britishmuseum.org"><img src="/static/img/bmBlackWhite.png" width="184" height="73" alt="The British Museum logo"/></a>
+
         <div class="row">
         <iframe src="http://ghbtns.com/github-btn.html?user=findsorguk&repo=photomasking&type=watch&count=true&size=large" allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe>
 
