--- a/long_description.html
+++ b/long_description.html
@@ -25,6 +25,8 @@
     ignore irrelevant information.
         </p>
 
+    <p>An example of one of these models has now been produced and can be <a target="_blank" href="http://micropasts.org/3D">seen here</a>.</p>
+
         <h3>This project is on behalf of</h3>
         <a href="http://finds.org.uk"><img src="/static/img/pasrgbsize4.jpg" width="213" height="104" alt="The Portable Antiquities Scheme logo"/></a>
         <a href="http://britishmuseum.org"><img src="/static/img/bmBlackWhite.png" width="184" height="73" alt="The British Museum logo"/></a>
