--- a/tutorial.html
+++ b/tutorial.html
@@ -6,7 +6,7 @@
             </div>
             <div id="0" class="modal-body" style="display:none">
                 <p>
-                    This application is very simple (but not that it does
+                    This application is very simple (but does
   not yet work on mobile devices). When you participate, the platform
   will load a photograph of an archaeological artefact.Once the image
   has been loaded, you will be asked to click around the edge of the artefact in order to define a
