--- a/template.html
+++ b/template.html
@@ -195,7 +195,7 @@ a.ol-full-screen-true:after {
             </div>
             <div id="0" class="modal-body" style="display:none">
                 <p>
-                    This application is very simple. When you participate,
+                    This application is very simple (but it does not yet work on mobile devices). When you participate,
                     the platform will load a photograph of an archaeological artefact.
                     Once the image has been loaded, you will be asked
                     to click or tap around the edge of the artefact in order to define a
@@ -224,6 +224,10 @@ a.ol-full-screen-true:after {
                 click on the "Holes" button to be given an opportunity
                 to draw these in, as a second step, after you have created the initial outline
                 around the object. During the task, you can always return to this tutorial via the "Help" button. 
+                </p>
+                
+                <p>
+                	An example of a finished <a href="http://micropasts.org/3D">3D model</a> has now been completed.	
                 </p>
             	<p>
                 To find out how the project is progressing, to suggest
