--- a/template.html
+++ b/template.html
@@ -303,14 +303,14 @@ a.ol-full-screen-true:after {
 <script>
 function loadUserProgress() {
     pybossa.userProgress('photomasking').done(function(data){
-    	console.log(data);
-        if ((data.done == 1) && ($.cookie('survey') === undefined)){
+    	console.log('Number of tasks completed ' + data.done);
+        if ((data.done == 1) && ($.cookie('surveyPhotoMask') === undefined)){
            $("#survey").modal('show');
-           $.cookie('survey', 'shown', { path: '/'});
+           $.cookie('surveyPhotoMAsk', 'shown', { path: '/'});
         }
-        if ((data.done == 25) && ($.cookie('survey25') === undefined)){
+        if ((data.done == 25) && ($.cookie('survey25PhotoMask') === undefined)){
            $("#survey25").modal('show');
-           $.cookie('survey25', 'shown', { path: '/'});
+           $.cookie('survey25photoMask', 'shown', { path: '/'});
         }
         var pct = Math.round((data.done*100)/data.total);
         $("#progress").css("width", pct.toString() +"%");
