Changed class for progress bar

--- a/template.html
+++ b/template.html
@@ -153,7 +153,7 @@ a.ol-full-screen-true:after {
         <!-- Progress bar for the user -->
         <span id="total" class="label label-inverse"></span></p>
         <div class="progress progress-striped">
-            <div id="progress" rel="tooltip" title="#" class="bar" style="width: 0%;"></div>
+            <div id="progress" rel="tooltip" title="#" class="progress-bar" role="progressbar" style="width: 0%;"></div>
         </div>
 
         <div id="answer"> <!-- Start DIV for the submission buttons -->
